# DarkmagentaTenderFrontendpu

./: .gitignore  .replit  main.py  pyproject.toml  replit.nix  run_completar.py  start.sh
.agents/: agent_assets_metadata.toml
assets/: README.txt
attached_assets/: MARKE_PRXYYY_1779082998342.jfif  Pasted--Toda-la-raz-n-El-Agent-de-Replit-necesita-los-enlaces-_1777693922938.txt  Pasted-Hola-Necesito-actualizar-el-bot-de-Discord-y-el-script-_1779086616502.txt  Pasted-Hola-Necesito-agregar-una-integraci-n-avanzada-entre-mi_1779077472395.txt  Pasted-Hola-Necesito-que-modifiques-el-c-digo-de-mi-bot-de-Dis_1779073334012.txt  Pasted-Hola-Necesito-que-modifiques-el-c-digo-de-mi-bot-de-Dis_1779073352422.txt  Pasted-IA-el-bot-de-automatizaci-n-de-compras-y-canje-en-Latin_1779498474447.txt  Pasted-IA-necesito-que-agregues-una-nueva-funcionalidad-al-bot_1779299523607.txt  mitm_cert.pem
bot/: automation.py  comprobante_ai.py  database.py  generate_session.py  latingm_scraper.py  main.py  payments.py  telegram_client.py  twilio_helper.py  webhook_server.py
libs/: libgbm.so.1  libmount.so.1  libudev.so.1
scripts/: make_avatar_anim.py  make_banner_text.py  make_banner_v2.py  make_banner_v3.py
tools/: gen_telegram_session.py
