[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "discord-py>=2.7.1",
    "email-validator>=2.3.0",
    "flask>=3.1.3",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=25.3.0",
    "mercadopago>=2.4.0",
    "openai>=2.33.0",
    "playwright>=1.58.0",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "PySocks>=1.7.1",
    "python-socks[asyncio]>=2.5.3",
    "telethon>=1.36.0",
    "twilio>=9.10.5",
]
